[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.82.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "nltk>=3.9.1",
    "textblob>=0.19.0",
    "scikit-learn>=1.6.1",
    "numpy>=2.2.6",
    "werkzeug>=3.1.3",
    "requests>=2.32.3",
    "cryptography>=45.0.3",
    "sqlalchemy>=2.0.41",
    "wave>=0.0.2",
    "opencv-python>=4.11.0.86",
    "sounddevice>=0.5.2",
    "pyaudio>=0.2.14",
    "bcrypt>=4.3.0",
    "flask-talisman>=1.1.0",
    "flask-limiter>=3.12",
    "pyotp>=2.9.0",
]
